unpackaged/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Allows Users to document issues when doing UAT or Go Live.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issues Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>