unpackaged/main/default/objects/Issue__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>