unpackaged/main/default/objects/Issue__c/fields/Campaign_Partner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Partner</label>
    <referenceTo>Campaign_Partner__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>