unpackaged/main/default/objects/Issue__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Damage</label>
    <referenceTo>litify_pm__Damage__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>