unpackaged/main/default/objects/Issue__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <label>Date Resolved</label>
    <type>DateTime</type>
</CustomField>