unpackaged/main/default/objects/Issue__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>if( 
ISPICKVAL(Status__c, &quot;Resolved&quot;),  
Date_Resolved__c - CreatedDate,
Now() - CreatedDate
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>