unpackaged/main/default/objects/Issue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Blocked or Needs More Info Status</description>
    <inlineHelpText>Please describe why status is Blocked, Failed Testing, Need more Info</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>