unpackaged/main/default/objects/Issue__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>litify_pm__Expense__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>