unpackaged/main/default/objects/Issue__c/fields/Injury__c.field-meta.xml
<CustomField>
    <fullName>Injury__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Injury</label>
    <referenceTo>litify_pm__Injury__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>