unpackaged/main/default/objects/Issue__c/fields/issue_details__c.field-meta.xml
<CustomField>
    <fullName>issue_details__c</fullName>
    <label>Issue details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>