unpackaged/main/default/objects/Issue__c/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <label>Jira Ticket</label>
    <type>Url</type>
</CustomField>