unpackaged/main/default/objects/Issue__c/fields/Litify_Note__c.field-meta.xml
<CustomField>
    <fullName>Litify_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Litify Note</label>
    <referenceTo>litify_pm__lit_Note__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>