unpackaged/main/default/objects/Issue__c/fields/Litify_Owner__c.field-meta.xml
<CustomField>
    <fullName>Litify_Owner__c</fullName>
    <label>Litify Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>