unpackaged/main/default/objects/Issue__c/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negotiation</label>
    <referenceTo>litify_pm__Negotiation__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>