unpackaged/main/default/objects/Issue__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>