unpackaged/main/default/objects/Issue__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>