unpackaged/main/default/objects/Issue__c/fields/Power_User__c.field-meta.xml
<CustomField>
    <fullName>Power_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>