unpackaged/main/default/objects/Issue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>P1 - Items that are required for Launch or during warranty period

P2 - Items that are acceptable or addressable during post launch or subsequent phase.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <label>P1 - Launch/Warranty</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>P2 - Post Launch/Sub-Phase</label>
            </value>
            <value>
                <fullName>Nice to have</fullName>
                <isActive>false</isActive>
                <label>Nice to have</label>
            </value>
            <value>
                <fullName>Prevents me from doing work</fullName>
                <isActive>false</isActive>
                <label>Prevents me from doing work</label>
            </value>
            <value>
                <fullName>Prevents the company from doing work</fullName>
                <isActive>false</isActive>
                <label>Prevents the company from doing work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>