unpackaged/main/default/objects/Issue__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>litify_pm__Request__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>