unpackaged/main/default/objects/Issue__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolution</label>
    <referenceTo>litify_pm__Resolution__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>