unpackaged/main/default/objects/Issue__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <description>Litify Team will populate the description of how they resolved the issue.</description>
    <inlineHelpText>Litify Team will populate the description of how they resolved the issue.</inlineHelpText>
    <label>Resolution Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>