unpackaged/main/default/objects/Issue__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>