unpackaged/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Ready for Litify</fullName>
            </value>
            <value>
                <fullName>Need more Info</fullName>
            </value>
            <value>
                <fullName>Failed Testing</fullName>
            </value>
            <value>
                <fullName>Won&#39;t Do</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>