unpackaged/main/default/objects/Issue__c/validationRules/Change_owner_to_Litify_when_failed.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_owner_to_Litify_when_failed</fullName>
    <active>true</active>
    <description>If status is failed testing, change owner to Litify Services</description>
    <errorConditionFormula>TEXT(Status__c) = &quot;Failed Testing&quot; &amp;&amp;
	 (OwnerId =  Submitter__c ||  OwnerId =  Power_User__c )</errorConditionFormula>
    <errorMessage>Please change owner to Litify Services</errorMessage>
</ValidationRule>