unpackaged/main/default/objects/Issue__c/validationRules/Description_for_Blocked_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_for_Blocked_Status</fullName>
    <active>true</active>
    <description>send error if status is blocked, needs more info or failed testing and description is blacnk</description>
    <errorConditionFormula>(TEXT(Status__c) = &quot;Blocked&quot;  ||
	TEXT(Status__c) = &quot;Need more Info&quot; ||
	TEXT(Status__c) =&quot;Failed Testing&quot;) &amp;&amp;
	ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please enter more information relating to the status of the issue in the Description Box</errorMessage>
</ValidationRule>