unpackaged/main/default/objects/Issue__c/validationRules/Ready_for_Litify_Testing_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_for_Litify_Testing_Validation_Rule</fullName>
    <active>true</active>
    <description>If Status is Ready for Litify and Submitter or Power User = Owner. Execute validation Rule</description>
    <errorConditionFormula>(OwnerId =   Power_User__c || OwnerId = Submitter__c )
&amp;&amp;
TEXT(Status__c)= &quot;Ready for Litify&quot;</errorConditionFormula>
    <errorMessage>Please Change Owner to Litify Services.</errorMessage>
</ValidationRule>