unpackaged/main/default/objects/Issue__c/validationRules/resolutioncomments.validationRule-meta.xml
<ValidationRule>
    <fullName>resolutioncomments</fullName>
    <active>true</active>
    <description>When a status is ready for testing and resolution comments is blank fire an error.</description>
    <errorConditionFormula>(TEXT(Status__c) = &quot;Ready for Testing&quot;)  &amp;&amp;
 ISBLANK( Resolution_Comments__c )</errorConditionFormula>
    <errorMessage>Please fill out resolution comments</errorMessage>
</ValidationRule>