unpackaged/main/default/objects/Issue__c/listViews/All_Issues.listView-meta.xml
<ListView>
    <fullName>All_Issues</fullName>
    <columns>NAME</columns>
    <columns>Submitter__c</columns>
    <columns>Status__c</columns>
    <columns>Litify_Owner__c</columns>
    <columns>issue_details__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Issues</label>
</ListView>