unpackaged/main/default/objects/Issue__c/listViews/All_Open_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>issue_details__c</columns>
    <columns>Status__c</columns>
    <columns>Litify_Owner__c</columns>
    <columns>Type_of_Issue__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Duplicate,Won&#39;t Do</value>
    </filters>
    <label>All Open Issues</label>
</ListView>