unpackaged/main/default/objects/Issue__c/listViews/Assigned_to_Power_User_Issues.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Power_User_Issues</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>issue_details__c</columns>
    <columns>Status__c</columns>
    <columns>Litify_Owner__c</columns>
    <columns>Type_of_Issue__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Assigned to Power User</label>
</ListView>