unpackaged/main/default/objects/Issue__c/listViews/Not_Assigned.listView-meta.xml
<ListView>
    <fullName>Not_Assigned</fullName>
    <columns>NAME</columns>
    <columns>issue_details__c</columns>
    <columns>Priority__c</columns>
    <columns>Litify_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Submitter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Litify_Owner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Litify</value>
    </filters>
    <label>Not Assigned</label>
</ListView>